include(tbb)
include(VMProtect)
include(App)
include(Rendering)

include_directories(.)
include_directories(include)
include_directories(include/network)
include_directories(raknet/Source)
include_directories(../ClientShared)

file(GLOB SOURCES raknet/Source/*.cpp)

if (WIN32)
  list(APPEND SOURCES CrashReporter.cpp)
endif()

list(APPEND HEADERS BoostAppend.h)
list(APPEND HEADERS Client.h)
list(APPEND HEADERS ClientReplicator.h)
list(APPEND HEADERS ClusterUpdateBuffer.h)
list(APPEND HEADERS Compressor.h)
list(APPEND HEADERS ConcurrentRakPeer.h)
list(APPEND HEADERS DataBlockEncryptor.h)
list(APPEND HEADERS Dictionary.h)
list(APPEND HEADERS DirectPhysicsReceiver.h)
list(APPEND HEADERS ErrorCompPhysicsSender.h)
list(APPEND HEADERS ErrorCompPhysicsSender2.h)
list(APPEND HEADERS GamePerfMonitor.h)
list(APPEND HEADERS GuidRegistryService.h)
list(APPEND HEADERS include/network/api.h)
list(APPEND HEADERS include/network/ChatFilter.h)
list(APPEND HEADERS include/network/CompactCFrame.h)
list(APPEND HEADERS include/network/CrashReporter.h)
list(APPEND HEADERS include/network/CrispProxy.h)
list(APPEND HEADERS include/network/GameConfigurer.h)
list(APPEND HEADERS include/network/NetworkClusterPacketCache.h)
list(APPEND HEADERS include/network/NetworkOwner.h)
list(APPEND HEADERS include/network/NetworkPacketCache.h)
list(APPEND HEADERS include/network/Player.h)
list(APPEND HEADERS include/network/Players.h)
list(APPEND SOURCES include/network/WebChatFilter.h)
list(APPEND HEADERS InterpolatingPhysicsReceiver.h)
list(APPEND HEADERS Item.h)
list(APPEND HEADERS Marker.h)
list(APPEND HEADERS MechanismItem.h)
list(APPEND HEADERS MovementHistoryJob.h)
list(APPEND HEADERS NetworkFilter.h)
list(APPEND HEADERS NetworkOwnerJob.h)
list(APPEND HEADERS NetworkProfiler.h)
list(APPEND HEADERS NetworkSettings.h)
list(APPEND HEADERS PacketIds.h)
list(APPEND HEADERS Peer.h)
list(APPEND HEADERS PersistentDataStore.h)
list(APPEND HEADERS PhysicsReceiver.h)
list(APPEND HEADERS PhysicsSender.h)
list(APPEND HEADERS PropertySynchronization.h)
list(APPEND HEADERS Replicator.ChangePropertyItem.h)
list(APPEND HEADERS Replicator.DeleteInstanceItem.h)
list(APPEND HEADERS Replicator.EventInvocationItem.h)
list(APPEND HEADERS Replicator.GCJob.h)
list(APPEND HEADERS Replicator.HashItem.h)
list(APPEND HEADERS Replicator.h)
list(APPEND HEADERS Replicator.ItemSender.h)
list(APPEND HEADERS Replicator.JoinDataItem.h)
list(APPEND HEADERS Replicator.MarkerItem.h)
list(APPEND HEADERS Replicator.NewInstanceItem.h)
list(APPEND HEADERS Replicator.PingBackItem.h)
list(APPEND HEADERS Replicator.PingItem.h)
list(APPEND HEADERS Replicator.PingJob.h)
list(APPEND HEADERS Replicator.ProcessPacketsJob.h)
list(APPEND HEADERS Replicator.ReferencePropertyChangedItem.h)
list(APPEND HEADERS Replicator.RockyItem.h)
list(APPEND HEADERS Replicator.SendDataJob.h)
list(APPEND HEADERS Replicator.StatsItem.h)
list(APPEND HEADERS Replicator.StreamJob.h)
list(APPEND HEADERS Replicator.TagItem.h)
list(APPEND HEADERS ReplicatorStats.h)
list(APPEND HEADERS Rijndael-Boxes.h)
list(APPEND HEADERS Rijndael.h)
list(APPEND HEADERS RoundRobinPhysicsSender.h)
list(APPEND HEADERS Server.h)
list(APPEND HEADERS ServerReplicator.h)
list(APPEND HEADERS Streaming.h)
list(APPEND HEADERS StreamingUtil.h)
list(APPEND HEADERS TopNErrorsPhysicsSender.h)
list(APPEND HEADERS Util.h)


list(APPEND SOURCES API.cpp)
list(APPEND SOURCES BoostAppend.cpp)
list(APPEND SOURCES ChatFilter.cpp)
list(APPEND SOURCES Client.cpp)
list(APPEND SOURCES ClientReplicator.cpp)
list(APPEND SOURCES ClusterUpdateBuffer.cpp)
list(APPEND SOURCES Compressor.cpp)
list(APPEND SOURCES ConcurrentRakPeer.cpp)
list(APPEND SOURCES DataBlockEncryptor.cpp)
list(APPEND SOURCES Dictionary.cpp)
list(APPEND SOURCES DirectPhysicsReceiver.cpp)
list(APPEND SOURCES ErrorCompPhysicsSender2.cpp)
list(APPEND SOURCES ErrorCompPhysicsSender.cpp)
list(APPEND SOURCES GameConfigurer.cpp)
list(APPEND SOURCES GamePerfMonitor.cpp)
list(APPEND SOURCES GuidRegistryService.cpp)
list(APPEND SOURCES InterpolatingPhysicsReceiver.cpp)
list(APPEND SOURCES Item.cpp)
list(APPEND SOURCES Marker.cpp)
list(APPEND SOURCES MechanismItem.cpp)
list(APPEND SOURCES MovementHistoryJob.cpp)
list(APPEND SOURCES NetworkClusterPacketCache.cpp)
list(APPEND SOURCES NetworkFilter.cpp)
list(APPEND SOURCES NetworkOwnerJob.cpp)
list(APPEND SOURCES NetworkPacketCache.cpp)
list(APPEND SOURCES NetworkProfiler.cpp)
list(APPEND SOURCES NetworkSettings.cpp)
list(APPEND SOURCES Peer.cpp)
list(APPEND SOURCES PersistentDataStore.cpp)
list(APPEND SOURCES PhysicsReceiver.cpp)
list(APPEND SOURCES PhysicsSender.cpp)
list(APPEND SOURCES Player.cpp)
list(APPEND SOURCES Players.cpp)
list(APPEND SOURCES Replicator.ChangePropertyItem.cpp)
list(APPEND SOURCES Replicator.cpp)
list(APPEND SOURCES Replicator.DeleteInstanceItem.cpp)
list(APPEND SOURCES Replicator.EventInvocationItem.cpp)
list(APPEND SOURCES Replicator.GCJob.cpp)
list(APPEND SOURCES Replicator.HashItem.cpp)
list(APPEND SOURCES Replicator.ItemSender.cpp)
list(APPEND SOURCES Replicator.MarkerItem.cpp)
list(APPEND SOURCES Replicator.PingBackItem.cpp)
list(APPEND SOURCES Replicator.PingItem.cpp)
list(APPEND SOURCES Replicator.ReferencePropertyChangedItem.cpp)
list(APPEND SOURCES Replicator.RockyItem.cpp)
list(APPEND SOURCES Replicator.TagItem.cpp)
list(APPEND SOURCES Replicator.JoinDataItem.cpp)
list(APPEND SOURCES Replicator.NewInstanceItem.cpp)
list(APPEND SOURCES ReplicatorStats.cpp)
list(APPEND SOURCES Replicator.StatsItem.cpp)
list(APPEND SOURCES Replicator.StreamJob.cpp)
list(APPEND SOURCES rijndael.cpp)
list(APPEND SOURCES RoundRobinPhysicsSender.cpp)
list(APPEND SOURCES Server.cpp)
list(APPEND SOURCES ServerReplicator.cpp)
list(APPEND SOURCES Streaming.cpp)
list(APPEND SOURCES TopNErrorsPhysicsSender.cpp)
list(APPEND SOURCES Util.cpp)
list(APPEND SOURCES WebChatFilter.cpp)

add_library(Network OBJECT ${SOURCES} ${HEADERS})
