include(App)

include_directories(include)
include_directories(../g3d/include)
include_directories(../RbxG3d/include)
include_directories(../AppDraw/include)

list(APPEND HEADERS include/GfxBase/FrameRateManager.h)
list(APPEND HEADERS include/GfxBase/MeshGen.h)
list(APPEND HEADERS include/GfxBase/Adorn.h)
list(APPEND HEADERS include/GfxBase/Type.h)
list(APPEND HEADERS include/GfxBase/AdornSurface.h)
list(APPEND HEADERS include/GfxBase/RenderStats.h)
list(APPEND HEADERS include/GfxBase/MeshFileStructs.h)
list(APPEND HEADERS include/GfxBase/FileMeshData.h)
list(APPEND HEADERS include/GfxBase/RenderCaps.h)
list(APPEND HEADERS include/GfxBase/Part.h)
list(APPEND HEADERS include/GfxBase/IAdornable.h)
list(APPEND HEADERS include/GfxBase/GfxPart.h)
list(APPEND HEADERS include/GfxBase/ViewBase.h)
list(APPEND HEADERS include/GfxBase/RenderSettings.h)
list(APPEND HEADERS include/GfxBase/IAdornableCollector.h)
list(APPEND HEADERS include/GfxBase/Typesetter.h)
list(APPEND HEADERS include/GfxBase/TextureProxyBase.h)
list(APPEND HEADERS include/GfxBase/Image.h)
list(APPEND HEADERS include/GfxBase/AdornBillboarder.h)
list(APPEND HEADERS include/GfxBase/AdornBillboarder2D.h)
list(APPEND HEADERS include/GfxBase/ViewportBillboarder.h)
list(APPEND HEADERS include/GfxBase/PartIdentifier.h)
list(APPEND HEADERS include/GfxBase/AsyncResult.h)

list(APPEND SOURCES IAdornableCollector.cpp)
list(APPEND SOURCES RenderSettings.cpp)
list(APPEND SOURCES Adorn.cpp)
list(APPEND SOURCES RenderCaps.cpp)
list(APPEND SOURCES GfxPart.cpp)
list(APPEND SOURCES RenderStats.cpp)
list(APPEND SOURCES FileMeshData.cpp)
list(APPEND SOURCES PartIdentifier.cpp)
list(APPEND SOURCES AdornSurface.cpp)
list(APPEND SOURCES FrameRateManager.cpp)
list(APPEND SOURCES ViewBase.cpp)
list(APPEND SOURCES AdornBillboarder.cpp)
list(APPEND SOURCES AdornBillboarder2D.cpp)
list(APPEND SOURCES ViewportBillboarder.cpp)

add_library(GfxBase OBJECT ${SOURCES} ${HEADERS})
